# pretty_yaml

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
dprint_plugin/: Cargo.toml
dprint_plugin/deployment/: schema.json
dprint_plugin/deployment/npm/: package.json
dprint_plugin/src/: config.rs  lib.rs
pretty_yaml/: Cargo.toml  README.md
pretty_yaml/examples/: fmt.rs
pretty_yaml/src/: config.rs  ctx.rs  lib.rs  printer.rs
pretty_yaml/tests/: fmt.rs
pretty_yaml/tests/fmt/alias/: common.snap
pretty_yaml/tests/fmt/ansible/: playbook.snap
pretty_yaml/tests/fmt/block-folded/: clip.snap  indent.snap  keep.snap  map.snap  middle-comment.snap  middle-comments.snap  newline-unaligned.snap  newline.snap  props-in-map.snap  (+5 more)
yaml_parser/: Cargo.toml  README.md
yaml_parser/examples/: debug_cst.rs
yaml_parser/src/: ast.rs  error.rs  indent.rs  lib.rs  set_state.rs  verify_state.rs  with_state.rs
yaml_parser/tests/: fail.rs  pass.rs
yaml_parser/tests/fail/: anchor-and-alias-as-mapping-key.snap  anchor-before-sequence-entry-on-same-line.snap  anchor-plus-alias.snap  bad-indentation-in-mapping-(2).snap  bad-indentation-in-mapping.snap  colon-followed-by-comma.snap  comment-between-plain-scalar-lines.snap  comment-in-plain-multiline-value.snap  comment-that-looks-like-a-mapping-key.snap  comment-without-whitespace-after-block-scalar-indicator.snap  dash-in-flow-sequence.snap  directive-by-itself-with-no-document.snap  directive-variants-1.snap  directive-variants-2.snap  directive-variants-3.snap  directive-variants-3.yaml  double-quoted-string-without-closing-quote.snap  extra-words-on-yaml-directive.snap  flow-mapping-missing-a-separating-comma.snap  flow-sequence-with-invalid-comma-at-the-beginning.snap  flow-sequence-with-invalid-extra-closing-bracket.snap  flow-sequence-with-invalid-extra-comma.snap  flow-sequence-without-closing-bracket.snap  invalid-block-mapping-key-on-same-line-as-previous-key.snap  invalid-comma-in-tag.snap  invalid-item-after-end-of-flow-sequence.snap  invalid-mapping-after-sequence.snap  invalid-mapping-in-plain-multiline.snap  invalid-mapping-in-plain-scalar.snap  invalid-scalar-at-the-end-of-mapping.snap  invalid-scalar-at-the-end-of-sequence.snap  invalid-sequene-item-on-same-line-as-previous-item.snap  invalid-tag.snap  invalid-text-after-block-scalar-indicator.snap  invalid-value-after-mapping.snap  literal-modifiers-2.snap  mapping-starting-at-----line.snap  missing-colon.snap  missing-comma-in-flow.snap  multiline-implicit-keys.snap  (+11 more)
yaml_parser/tests/pass/: aliases-in-block-sequence.snap  aliases-in-explicit-block-mapping.snap  aliases-in-flow-objects.snap  aliases-in-implicit-block-mapping.snap  allowed-characters-in-alias.snap  allowed-characters-in-keys.snap  allowed-characters-in-plain-scalars.snap  allowed-characters-in-quoted-mapping-key.snap  anchor-before-zero-indented-sequence.snap  anchor-for-empty-node.snap  anchor-with-colon-in-the-middle.snap  anchor-with-unicode-character.snap  anchors-and-tags.snap  anchors-in-mapping.snap  anchors-on-empty-scalars.snap  anchors-with-colon-in-name.snap  backslashes-in-singlequotes.snap  bare-document-after-document-end-marker.snap  blank-lines.snap  blank-lines.yaml  block-mapping-key-after-empty-block-sequence.snap  block-mapping-key-after-empty-block-sequence.yaml  block-mapping-with-missing-keys.snap  block-mapping-with-missing-values.snap  block-mapping-with-multiline-scalars.snap  block-mappings-in-block-sequence.snap  block-scalar-indicator-order.snap  block-scalar-keep.snap  block-scalar-keep.yaml  block-scalar-strip-1.3.snap  block-scalar-strip-1.3.yaml  block-scalar-strip.snap  block-scalar-strip.yaml  block-sequence-in-block-mapping.snap  block-sequence-in-block-sequence.snap  block-sequence-indentation.snap  block-submapping.snap  colon-and-adjacent-value-after-comment-on-next-line.snap  colon-and-adjacent-value-on-next-line.snap  colon-at-the-beginning-of-adjacent-flow-scalar.snap  (+297 more)
(+515 files in other folders)
