[package]
name = "dprint_plugin_yaml"
version = "0.2.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "pretty_yaml as dprint plugin."
repository = "https://github.com/g-plane/pretty_yaml"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.66", default-features = false, features = [
    "wasm",
] }
pretty_yaml = { path = "../pretty_yaml", features = ["config_serde"] }
serde_json = "1.0"
