[package]
name = "pretty_yaml"
version = "0.0.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Semi-tolerant and configurable YAML formatter."
repository = "https://github.com/g-plane/pretty_yaml"
license = "MIT"
exclude = ["/tests"]

[dependencies]
itertools = "0.12"
rowan = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true }
tiny_pretty = "0.1"
yaml_parser = { version = "0.0", path = "../yaml_parser" }

[dev-dependencies]
insta = { version = "1.38", features = ["glob"] }
similar-asserts = "1.5"
toml = "0.8"

[features]
config_serde = ["serde"]
