[package]
name = "pretty_yaml"
version = "0.5.1"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Semi-tolerant and configurable YAML formatter."
repository = "https://github.com/g-plane/pretty_yaml"
license = "MIT"
keywords = ["yaml", "formatter"]
exclude = ["/tests"]

[dependencies]
rowan.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }
tiny_pretty = "0.2"
yaml_parser = { version = "0.2", path = "../yaml_parser" }

[dev-dependencies]
insta.workspace = true
similar-asserts = "1.5"
toml = "0.8"

[features]
config_serde = ["serde"]
