[package]
name = "yaml_parser"
version = "0.1.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Semi-tolerant YAML concrete syntax tree parser."
repository = "https://github.com/g-plane/pretty_yaml"
license = "MIT"
keywords = ["yaml", "parser"]
exclude = ["/tests"]

[dependencies]
rowan = "0.15"
winnow = "0.6"

[dev-dependencies]
insta = { version = "1.38", features = ["glob"] }
