[package]
name = "yaml_parser"
version = "0.2.2"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Semi-tolerant YAML concrete syntax tree parser."
repository = "https://github.com/g-plane/pretty_yaml"
license = "MIT"
categories = ["parser-implementations", "text-processing"]
keywords = ["yaml", "parser"]
exclude = ["/tests"]

[dependencies]
rowan.workspace = true
winnow = "0.7"

[dev-dependencies]
insta.workspace = true
